# ThunderDuck

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  benchmark_report_comprehensive.md  benchmark_report_v2.md  join_v4_benchmark_results.md
benchmark/: benchmark_app.cpp  comprehensive_benchmark.cpp  comprehensive_benchmark_v2.cpp  comprehensive_benchmark_v3.cpp  comprehensive_performance_analysis.cpp  comprehensive_uma_benchmark.cpp  comprehensive_v125_benchmark.cpp  comprehensive_version_benchmark.cpp  detailed_benchmark.cpp  full_benchmark_report.cpp  full_performance_benchmark.cpp  gpu_10m_test.cpp  hash_join_comparison_benchmark.cpp  intelligent_strategy_benchmark.cpp  join_v4_benchmark.cpp  memory_benchmark.cpp  show_system_catalog.cpp  test_aggregate_10m.cpp  test_aggregate_v9.cpp  test_aggregate_version_compare.cpp  test_amx_vector.cpp  test_arrow_uma.cpp  test_filter_10m.cpp  test_filter_10m_debug.cpp  test_filter_v3.cpp  test_gpu_v5.cpp  test_gpu_v5_random.cpp  test_group_aggregate_v92.cpp  test_group_aggregate_v93.cpp  test_hash_join_highmatch.cpp  test_hash_join_v4.cpp  test_join_v10.cpp  test_join_v3.cpp  test_parallel.cpp  test_prefetch_v91.cpp  test_topk_v3.cpp  test_topk_v5.cpp  test_uma_join.cpp  test_vector_gpu_v2.cpp  test_vector_strategy.cpp  (+14 more)
benchmark/tpch/: tpch_benchmark_main.cpp  tpch_comprehensive_analysis.cpp  tpch_config_v33.cpp  tpch_config_v33.h  tpch_constants.h  tpch_data_loader.cpp  tpch_data_loader.h  tpch_executor.cpp  tpch_executor.h  tpch_generic_operators.h  tpch_generic_topn.h  tpch_operators.cpp  tpch_operators.h  tpch_operators_v24.cpp  tpch_operators_v24.h  tpch_operators_v25.cpp  tpch_operators_v25.h  tpch_operators_v26.cpp  tpch_operators_v26.h  tpch_operators_v27.cpp  tpch_operators_v27.h  tpch_operators_v32.cpp  tpch_operators_v32.h  tpch_operators_v33.cpp  tpch_operators_v33.h  tpch_operators_v34.cpp  tpch_operators_v34.h  tpch_operators_v35.cpp  tpch_operators_v35.h  tpch_operators_v36.cpp  tpch_operators_v36.h  tpch_operators_v37.cpp  tpch_operators_v37.h  tpch_operators_v38.cpp  tpch_operators_v38.h  tpch_operators_v39.cpp  tpch_operators_v39.h  tpch_operators_v40.cpp  tpch_operators_v40.h  tpch_operators_v41.cpp  (+43 more)
benchmarks/: CMakeLists.txt  bench_aggregate.cpp
docs/: ACCELERATE_FRAMEWORK_ANALYSIS.md  ADAPTIVE_STRATEGY_DESIGN.md  ALGORITHMS.md  AMX_ACCELERATION_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BENCHMARK_REPORT.md  BENCHMARK_REPORT_COMPREHENSIVE.md  BENCHMARK_REPORT_V11_FINAL.md  BENCHMARK_REPORT_V12.md  BENCHMARK_REPORT_V12_5.md  BENCHMARK_REPORT_V12_FULL.md  BENCHMARK_REPORT_V12_LATEST.md  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_BENCHMARK_REPORT.md  COMPREHENSIVE_BENCHMARK_REPORT_V11.md  COMPREHENSIVE_BENCHMARK_REPORT_V12_5.md  COMPREHENSIVE_BENCHMARK_REPORT_V3.md  CURRENT_STATUS.md  DETAILED_BENCHMARK_REPORT.md  FILTER_COUNT_OPTIMIZATION_DESIGN.md  FULL_BENCHMARK_REPORT_V6.md  FULL_PERFORMANCE_ANALYSIS_REPORT.md  GPU_JOIN_V5_DESIGN.md  HARDWARE_ABSTRACTION_EVALUATION.md  HASH_JOIN_AGGREGATE_OPTIMIZATION_DESIGN.md  HASH_JOIN_OPTIMIZATION_ANALYSIS.md  HASH_JOIN_V4_DESIGN.md  HASH_JOIN_VERSION_BENCHMARK_REPORT.md  INDEX.md  INTELLIGENT_STRATEGY_BENCHMARK_REPORT.md  INTELLIGENT_STRATEGY_DESIGN.md  JOIN_J3_PERFORMANCE_ANALYSIS.md  JOIN_OPTIMIZATION_GAP_ANALYSIS.md  JOIN_V3_OPTIMIZATION_DESIGN.md  MEMORY_OPTIMIZATION_DESIGN.md  MULTI_AGENT_DEVELOPMENT_FRAMEWORK.md  MULTI_AGENT_FRAMEWORK_ANALYSIS.md  NPU_ABSTRACTION_DESIGN.md  NPU_SQL_OPERATOR_RESEARCH.md  (+72 more)
include/thunderduck/: adaptive_strategy.h  aggregate.h  bloom_filter.h  filter.h  generic_operators.h  generic_operators_v52.h  generic_operators_v54.h  generic_operators_v58.h  join.h  memory.h  operator_registry.h  operators.h  perfect_hash.h  query_memory.h  simd.h  sort.h  system_catalog.h  thunderduck.h  uma_data_chunk.h  uma_memory.h  v12_5.h  v12_unified.h  v13.h  v14.h  v18.h  v19.h  vector_search.h
include/thunderduck/npu/: device.h  inference.h  model.h  tensor.h
include/thunderduck/npu/backend/: bnns.h  coreml.h  mps.h
include/thunderduck/vector_db/: quantizer.h  reranker.h  similarity.h  transform.h
src/core/: adaptive_strategy.cpp  memory_allocator.cpp  operator_registry.cpp  thunder_engine.cpp  uma_data_chunk.mm  uma_memory.mm  v12_5_unified.cpp  v12_unified.cpp  v13_unified.cpp  v14_unified.cpp  v18_unified.cpp  v19_unified.cpp
src/gpu/: aggregate_uma.mm  filter_uma.mm  group_aggregate_v13.mm  group_aggregate_v2.mm  group_aggregate_v3.mm  hash_join_metal.mm  hash_join_metal_v5.mm  hash_join_uma.mm  inner_join_gpu.mm  semi_join_gpu.mm  topk_uma.mm  topk_v13.mm
src/gpu/shaders/: aggregate.metal  filter.metal  group_aggregate_v2.metal  group_aggregate_v3.metal  hash_join.metal  partitioned_join.metal  topk.metal
src/npu/: bloom_bnns.cpp
src/operators/aggregate/: group_aggregate_v14.cpp  group_aggregate_v15.cpp  simd_aggregate.cpp  simd_aggregate_parallel.cpp  simd_aggregate_v2.cpp  simd_aggregate_v4.cpp  simd_aggregate_v6.cpp
src/operators/filter/: simd_filter.cpp  simd_filter_parallel.cpp  simd_filter_v15.cpp  simd_filter_v19.cpp  simd_filter_v19_1.cpp  simd_filter_v2.cpp  simd_filter_v3.cpp  simd_filter_v5.cpp  simd_filter_v6.cpp
src/operators/join/: bloom_filter.cpp  hash_join_v10.cpp  hash_join_v10_1.cpp  hash_join_v10_2.cpp  hash_join_v11.cpp  hash_join_v13.cpp  hash_join_v14.cpp  hash_join_v15.cpp  hash_join_v19_2.cpp  hash_join_v3.cpp  hash_join_v4.cpp  hash_join_v4_bloom.cpp  hash_join_v4_radix256.cpp  hash_join_v6.cpp  robin_hood_hash.cpp  simd_hash_join.cpp
src/operators/sort/: radix_sort.cpp  simd_sort.cpp  topk_v3.cpp  topk_v4.cpp  topk_v5.cpp
src/operators/vector/: vector_search_v20.cpp
src/utils/: platform_detect.cpp
tests/: CMakeLists.txt  framework_test.cpp  test_aggregate.cpp  test_all.cpp  test_filter.cpp  test_join.cpp  test_operator_registry.cpp  test_sort.cpp
